--- a/account/templates/auth/user_detail.html
+++ b/account/templates/auth/user_detail.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <BR>
-{{user.username}}<BR>
-{{user.first_name}}<BR>
+帳號：{{user.username}}<BR>
+姓名：{{user.first_name}}<BR>
+學校：{{user.last_name}}<BR>
 {% endblock %}
