--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <h1>線上教室</h1>
     {% if user.is_authenticated %}
     {% if user.is_superuser %}
-    <a href="/account/user">所有帳號</a>
+    <a href="/account/user">帳號</a>
     {% endif %}
     {{ user.first_name }} 
     <a href="/account/logout">登出</a>
