--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
+{% load tag %}
 <html>
 <head>
 </head>
 <body>
     <h1>線上教室</h1>
     {% if user.is_authenticated %}
+    <a href="/student/classroom">班級</a>  
+    {% if user|teacher_group %}
+    <a href="/teacher/classroom">教師</a>
+    {% endif %}  
     {% if user.is_superuser %}
     <a href="/account/user">帳號</a>
-    {% endif %}
+    {% endif %}  
     {{ user.first_name }} 
     <a href="/account/logout">登出</a>
     {% else %}
