--- a/student/templates/student/classroom_list.html
+++ b/student/templates/student/classroom_list.html
@@ -13,6 +13,7 @@
   <td>
     <a href="/student/classroom/{{enroll.id}}/seat">座號</a>
     <a href="/student/classroom/{{classroom.id}}/classmate">同學</a>
+    <a href="/account/line/classmate/{{classroom.id}}/">私訊</a>
   </td>
   </tr>
 {% endfor %}
