--- a/teacher/templates/teacher/classroom_list.html
+++ b/teacher/templates/teacher/classroom_list.html
@@ -13,6 +13,7 @@
   <td>{{classroom.name}}</td>
   <td>{{classroom.password}}</td>
   <td>
+    <a href="/teacher/classroom/{{classroom.id}}/update">修改</a>    
     <a href="/student/classroom/{{classroom.id}}/classmate">學生</a>
   </td>
   </tr>
