--- a/account/templates/account/line_form.html
+++ b/account/templates/account/line_form.html
@@ -6,7 +6,7 @@
          <form action="" enctype="multipart/form-data"  method="post">
             <table class="table">
                 {{ form.as_table }}       
-           <tr><th>檔案:</td><td><input id="file" name="files" type="file"  multiple/><input id="submit" type="submit" value="送出"><td</tr>
+            <tr><td></td><td><input id="submit" type="submit" value="送出"><td</tr>
             </table>
             {% csrf_token %}
 
@@ -14,8 +14,9 @@
         <BR>
         <h1>歷史私訊</h1>
         <table class="table">
-        {% for message, read in messages %}
-        <tr><td>{{message.time}}<a href="/account/line/detail/{{classroom_id}}/{{message.id}}">{{message.title}}{% if not read %}(未讀){% endif %}</a></td></tr>
+        {% for message in messages %}
+        <tr><td>{{message.time}}<a href="/account/line/{{message.id}}">{{message.title}}</a>
+          {% if not message.id|read_already:user_id %}--未讀{% endif %}</td></tr>
         {% empty %}
         <tr><td>無</td></tr>
         {% endfor %}
