--- a/teacher/templates/teacher/classroom_list.html
+++ b/teacher/templates/teacher/classroom_list.html
@@ -15,6 +15,7 @@
   <td>
     <a href="/teacher/classroom/{{classroom.id}}/update">修改</a>    
     <a href="/student/classroom/{{classroom.id}}/classmate">學生</a>
+    <a href="/teacher/announce/{{classroom.id}}/create">公告</a>    
   </td>
   </tr>
 {% endfor %}
