--- a/student/templates/student/classroom_list.html
+++ b/student/templates/student/classroom_list.html
@@ -14,6 +14,7 @@
     <a href="/student/classroom/{{enroll.id}}/seat">座號</a>
     <a href="/student/classroom/{{classroom.id}}/classmate">同學</a>
     <a href="/account/line/classmate/{{classroom.id}}/">私訊</a>
+    <a href="/student/assignment/{{classroom.id}}/">作業</a>
   </td>
   </tr>
 {% endfor %}
