--- a/teacher/templates/teacher/classroom_list.html
+++ b/teacher/templates/teacher/classroom_list.html
@@ -16,6 +16,7 @@
     <a href="/teacher/classroom/{{classroom.id}}/update">修改</a>    
     <a href="/student/classroom/{{classroom.id}}/classmate">學生</a>
     <a href="/teacher/announce/{{classroom.id}}/create">公告</a>    
+    <a href="/teacher/assignment/{{classroom.id}}">作業</a>    
   </td>
   </tr>
 {% endfor %}
