--- a/templates/form.html
+++ b/templates/form.html
@@ -2,12 +2,11 @@
 
 {% block content %}
 
-<form action="" method="post">
+<form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <table>
     {{ form.as_table }}
-    </table>
-    <input type="submit" value="送出" />
-    
+      <tr><td></td><td><input type="submit" value="送出" /></td></tr>
+    </table>    
 </form>
 {% endblock %}
