--- a/student/templates/student/classroom_list.html
+++ b/student/templates/student/classroom_list.html
@@ -15,6 +15,7 @@
     <a href="/student/classroom/{{classroom.id}}/classmate">同學</a>
     <a href="/account/line/classmate/{{classroom.id}}/">私訊</a>
     <a href="/student/assignment/{{classroom.id}}/">作業</a>
+    <a href="/student/questionary/result/{{classroom.id}}/">問卷</a>
   </td>
   </tr>
 {% endfor %}
