--- a/teacher/templates/teacher/classroom_list.html
+++ b/teacher/templates/teacher/classroom_list.html
@@ -17,6 +17,7 @@
     <a href="/student/classroom/{{classroom.id}}/classmate">學生</a>
     <a href="/teacher/announce/{{classroom.id}}/create">公告</a>    
     <a href="/teacher/assignment/{{classroom.id}}">作業</a>    
+    <a href="/teacher/questionary/{{classroom.id}}">問卷</a>       
   </td>
   </tr>
 {% endfor %}
