--- a/teacher/templates/teacher/score_form.html
+++ b/teacher/templates/teacher/score_form.html
@@ -9,7 +9,7 @@
   <tr><td>檔案</td><td><a href="{{work.file.url}}">下載</a></td></tr>
   {% endif %}
 </table>
-<form action="" method="post" enctype="multipart/form-data">
+<form action="" method="post">
     {% csrf_token %}
     <table>
     {{ form.as_table }}
